       full filepaths. (Stefan)
- BUG: The status cache wasn't thread-safe and
       also not process-safe. Thanks to Luebbe
       for reminding me. (Stefan)
- ADD: Branch/Tag is available for single files
       too, not just folders. (Stefan)
- ADD: Several new commands for the repository
       browser. Also a new command in the context
       menu to start the repo browser. (Stefan)

Version 0.19
- BUG: The conflicted files weren't always determined
       correctly. (Stefan)
- BUG: The settings page for the menu layout set the
       settings to the default values if the page
       wasn't selected. (Dimentiy)
- BUG: File-entries in the log dialog could not be
       selected if the message contained more than
       three lines. (Stefan)
- BUG: Issue 67: Show Log + Escape = crash. fixed. (Stefan)
- BUG: There was a memory leak which made explorer use
       a huge amount of RAM over time. (Stefan)
- BUG: The cache timeout wasn't calculated correctly.
       This lead to wrong icon overlays and needed
       several "F5" to get the right ones. (Stefan)
- CHG: The "rename" command now uses the --force option
       by default so that modified files can be renamed
       too. (Stefan)
- CHG: The log dialog got minimize/maximize buttons. (Stefan)
- ADD: Log messages selectable to copy them to the
       clipboard (with Ctrl-C). Issue 64. (Stefan)
- ADD: Search function for log messages. (Stefan)
- ADD: Properties can be set/removed recursively. (Stefan)
- ADD: "Find" button in the merge dialog for finding
       the revision at which the branch occurred.
       Also the log dialog is shown to help decide
       which revisions should be merged in.
       Please note: this works only correct if the
       server has subversion 0.28 and higher! (Stefan)
- ADD: Commands "diff", "gnudiff" in the "Changed Files"
       dialog work now for wc-changes too.
       Also added a "revert" command. (Stefan)
- ADD: The "show log" button is activated not only